adding some stuff and stratworking on style

--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>MV Farm</title>
 </head>
 <body>
     <header>
-        <p>blah blah blah</p>
+        <img src="./res/Menu.svg" sizes="25px" alt="">
+        <hr>
+
+        <div class="header-content">
+            <div class="header-left">
+                <h1>A truly Circular Food Production Platform</h1>
+            </div>
+            <div class="header-right">
+                    <a href="#">
+                        <button type="button">GO SHOP NOW </button>
+                    </a>
+            </div>
+        </div>
+        <video src="https://www.youtube.com/watch?v=K8MnrNns5Yo" ></video>
+    
     </header>
-    <h1>A truly Circular Food Production Platform</h1>
-    <a href="./shop">GO SHOP NOW</a>
-    <video src="https://www.youtube.com/watch?v=K8MnrNns5Yo"></video>
 
     <div>
         <h2>What Sets Us Appart</h2>
