--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     </a>
             </div>
         </div>
-        <video src="https://www.youtube.com/watch?v=K8MnrNns5Yo" ></video>
-    
+        <video autoplay playsinline muted>
+            <source src="./res/Video Banner Stock Videos - Rural Farming Agriculture Nature.mp4" type="video/mp4"/>
+        </video>
     </header>
 
     <div>
