--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>MV Farm</title>
   </head>
@@ -31,10 +37,10 @@
       </video>
     </div>
 
-    <div>
+    <div class="first-content">
       <h2>What Sets Us Appart</h2>
-      <div>
-        <div>
+      <div class="first-table">
+        <div class="item">
           <img src="" alt="" />
           <div>
             <h3>Grown Today, Delivered Tomorrow</h3>
@@ -45,7 +51,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="item">
           <img src="" alt="" />
           <div>
             <h3>Not Your Average Grocery Delivery</h3>
@@ -56,7 +62,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="item">
           <img src="" alt="" />
           <div>
             <h3>Your Favorites on Autopilot</h3>
