--- a/index.html
+++ b/index.html
@@ -72,41 +72,49 @@
       </div>
     </div>
 
-    <div>
+    <div class="content-browse">
       <h2>Let's Browse All Our Best Categories</h2>
     </div>
 
-    <div>
+    <div class="avis">
       <p>
         "As a seasoned farmer that came up through the intershop model, I can't
         emphaize enough the importance of finding good farmer mentors foir
         individuals lookg for an agricultural education."
       </p>
-      <a href="">VIEW OUR FARMER</a>
+
+      <div class="farmer-button">
+        <a href="">
+          <button>VIEW OUR FARMER</button>
+        </a>
+      </div>
     </div>
 
-    <div>
-      <h2>From Farm To You In A New York Minute</h2>
-      <div>
-        <h3>1.SHOPPING</h3>
-        <p>
-          Shop on your schedule. Subscribe to your favorite staples or place an
-          à la carte order.
-        </p>
-      </div>
-      <div>
-        <h3>2.PACKING</h3>
-        <p>
-          Our farmers harvest your food. By ordering only what we need, we keep
-          our waste under 1%!
-        </p>
-      </div>
-      <div>
-        <h3>3.SHIPPING</h3>
-        <p>
-          On the day of your delivery, we pack up your box ans bring it to your
-          door.
-        </p>
+    <div class="shopping-process">
+      <h2>From Farm To You In <br>A New York Minute</h2>
+
+      <div class="second-table">
+        <div class="item">
+          <h3>1.SHOPPING</h3>
+          <p>
+            Shop on your schedule. Subscribe to your favorite staples or place
+            an à la carte order.
+          </p>
+        </div>
+        <div class="item">
+          <h3>2.PACKING</h3>
+          <p>
+            Our farmers harvest your food. By ordering only what we need, we
+            keep our waste under 1%!
+          </p>
+        </div>
+        <div class="item">
+          <h3>3.SHIPPING</h3>
+          <p>
+            On the day of your delivery, we pack up your box ans bring it to
+            your door.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -154,14 +162,14 @@
     </div>
 
     <footer>
-      <div>
+      <div class="footer-content">
         <!--Left side-->
-        <div></div>
+        <div class="footer-left"></div>
 
         <!--Right side-->
-        <div>
-          <div>
-            <div>
+        <div class="footer-right">
+          <div class="footer-list">
+            <div class="footer-list-item">
               <h2>Agricultural Resources</h2>
               <a href="#">Farm Publications</a>
               <a href="#">Success Story</a>
@@ -169,7 +177,7 @@
               <a href="#">FAQs</a>
             </div>
 
-            <div>
+            <div class="footer-list-item">
               <h2>Company Branch</h2>
               <a href="#">South East</a>
               <a href="#">Delta</a>
@@ -177,7 +185,7 @@
               <a href="#">Northeast</a>
             </div>
 
-            <div>
+            <div class="footer-list-item">
               <h2>Who We Are</h2>
               <a href="#">Our Team</a>
               <a href="#">Careers</a>
@@ -185,22 +193,22 @@
               <a href="#">In The News</a>
             </div>
 
-            <div>
+            <div class="footer-list-item">
               <h2>Subscribe Newsletter</h2>
               <a href="#">SUBSCRIBE NOW</a>
             </div>
           </div>
 
-          <div>
-            <div>
-              <h2>Qnother Offer</h2>
+          <div class="footer-list">
+            <div class="footer-list-item">
+              <h2>Another Offer</h2>
               <a href="#">The Experience</a>
               <a href="#">Success Story</a>
               <a href="#">Activities & Adventure</a>
               <a href="#">Food & Wine</a>
             </div>
 
-            <div>
+            <div class="footer-list-item">
               <h2>Farma For Fun</h2>
               <a href="#">Picnics</a>
               <a href="#">Spa & Fitness</a>
@@ -208,7 +216,7 @@
               <a href="#">Events</a>
             </div>
 
-            <div>
+            <div class="footer-list-item">
               <h2>Contact</h2>
               <p>Phone: +825477900321</p>
               <p>JL 452 Royalton Tumpike, Barnard, VT 05031</p>
